<?xml version="1.0"?>
<package>
  <name>ed_wbc</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="rayman747@hotmail.com">Ramon Wijnands</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ed</build_depend>
  <build_depend>fcl</build_depend>
  <build_depend>amigo_whole_body_controller</build_depend>
  <run_depend>ed</run_depend>
  <run_depend>fcl</run_depend>
  <run_depend>amigo_whole_body_controller</run_depend>

</package>
